--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,23 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.75"
+axum = "0.6.20"
 clap = { version = "4.4.6", features = ["derive"] }
+env_logger = "0.10.0"
+log = "0.4.20"
 rand = "0.8.5"
+serde = { version = "1.0.190", features = ["derive"] }
 termion = "2.0.1"
 tokio = { version = "1.33.0", features = ["full"] }
+
+[lib]
+name = "game"
+path = "src/lib.rs"
+
+[[bin]]
+name = "server"
+path = "src/bin/server.rs"
+
+[[bin]]
+name = "main"
+path = "src/main.rs"
