--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ clap = { version = "4.4.6", features = ["derive"] }
 env_logger = "0.10.0"
 log = "0.4.20"
 rand = "0.8.5"
+reqwest = { version = "0.11.22", features = ["json"] }
 serde = { version = "1.0.190", features = ["derive"] }
 termion = "2.0.1"
 tokio = { version = "1.33.0", features = ["full"] }
@@ -23,6 +24,10 @@ path = "src/lib.rs"
 [[bin]]
 name = "server"
 path = "src/bin/server.rs"
+
+[[bin]]
+name = "client"
+path = "src/bin/client.rs"
 
 [[bin]]
 name = "main"
