--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ axum = "0.6.20"
 clap = { version = "4.4.6", features = ["derive"] }
 env_logger = "0.10.0"
 log = "0.4.20"
+prettytable-rs = "0.10.0"
 rand = "0.8.5"
 reqwest = { version = "0.11.22", features = ["json"] }
 serde = { version = "1.0.190", features = ["derive"] }
