--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.75"
 axum = "0.6.20"
+chrono = "0.4.31"
 clap = { version = "4.4.6", features = ["derive"] }
 dialoguer = "0.11.0"
 env_logger = "0.10.0"
