--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ clap = { version = "4.4.6", features = ["derive"] }
 dialoguer = "0.11.0"
 env_logger = "0.10.0"
 log = "0.4.20"
+phf = { version = "0.11.2", features = ["macros"] }
 prettytable-rs = "0.10.0"
 rand = "0.8.5"
 reqwest = { version = "0.11.22", features = ["json"] }
